Parser: Simplify argument "lists" for type annotations

There can in fact only be one type argument, and we don't need a
finish() method. In fact the finish() method didn't return the type
argument at all.

Task-number: QTBUG-107171
Change-Id: Ifb7d85ca42a38d37da71b6453b458c7ec10cd64d
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>