src/qmldom/qqmldomreformatter.cpp
@@ -992,7 +992,11 @@ protected:
     bool visit(ESModule *) override { return true; }
     bool visit(DebuggerStatement *) override { return true; }
     bool visit(Type *) override { return true; }
+#if QT_VERSION >= QT_VERSION_CHECK(6, 5, 0)
+    bool visit(TypeArgument *) override { return true; }
+#else
     bool visit(TypeArgumentList *) override { return true; }
+#endif
     bool visit(TypeAnnotation *) override { return true; }
 
     // overridden to use BasicVisitor (and ensure warnings about new added AST)
@@ -1109,7 +1113,11 @@ protected:
     void endVisit(ESModule *) override { }
     void endVisit(DebuggerStatement *) override { }
     void endVisit(Type *) override { }
+#if QT_VERSION >= QT_VERSION_CHECK(6, 5, 0)
+    void endVisit(TypeArgument *) override { }
+#else
     void endVisit(TypeArgumentList *) override { }
+#endif
     void endVisit(TypeAnnotation *) override { }
 
     void throwRecursionDepthError() override
